objects/Bot_Feedback__c.object
<CustomObject>
    <fields>
        <fullName>Channel__c</fullName>
        <description>Determines the channel the bot conversation took place on.
By default only Chat is included, update this for new channels as you add the bot to them.</description>
        <inlineHelpText>The channel the bot conversation took place on.</inlineHelpText>
        <label>Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Chat</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Chat_Transcript__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Chat that this bot survey is related to</description>
        <inlineHelpText>Chat that this bot survey is related to</inlineHelpText>
        <label>Chat Transcript</label>
        <referenceTo>LiveChatTranscript</referenceTo>
        <relationshipLabel>Bot Feedback</relationshipLabel>
        <relationshipName>Bot_Feedback</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Survey_Comment__c</fullName>
        <description>Comments relating to their choice of positive or negative for the bot session</description>
        <inlineHelpText>Comments relating to their choice of positive or negative for the bot session</inlineHelpText>
        <label>Survey Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Survey_Positive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Was this a positive interaction or not?</description>
        <inlineHelpText>Was this a positive interaction or not? True for positive, False for negative/neutral</inlineHelpText>
        <label>Survey Positive</label>
        <type>Checkbox</type>
    </fields>
    <label>Bot Feedback</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Channel__c</columns>
        <columns>Survey_Positive__c</columns>
        <columns>Survey_Comment__c</columns>
        <columns>Chat_Transcript__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BF-{0000}</displayFormat>
        <label>Bot Feedback Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bot Feedback</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>